SERVER-51733 ShardLocal::createIndexOnConfig() falls back on hybrid index build if collection is not empty

(cherry-picked from commit 6419fd81bdefa91390303fdda48457c8a485399b)