src/mongo/s/client/shard_local.cpp
@@ -27,6 +27,8 @@
  *    it in the license file.
  */
 
+#define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kSharding
+
 #include <boost/none_t.hpp>
 
 #include "mongo/platform/basic.h"
@@ -45,6 +47,7 @@
 #include "mongo/db/repl/repl_set_config.h"
 #include "mongo/db/repl/replication_coordinator.h"
 #include "mongo/db/server_options.h"
+#include "mongo/logv2/log.h"
 #include "mongo/util/assert_util.h"
 #include "mongo/util/scopeguard.h"
 
@@ -170,13 +173,27 @@ Status ShardLocal::createIndexOnConfig(OperationContext* opCtx,
             return Status::OK();
         }
 
-        writeConflictRetry(opCtx, "ShardLocal::createIndexOnConfig", ns.ns(), [&] {
-            WriteUnitOfWork wunit(opCtx);
-            auto fromMigrate = true;
-            IndexBuildsCoordinator::get(opCtx)->createIndexesOnEmptyCollection(
-                opCtx, collection->uuid(), indexSpecs, fromMigrate);
-            wunit.commit();
-        });
+        auto fromMigrate = true;
+        if (!collection->isEmpty(opCtx)) {
+            // We typically create indexes on config/admin collections for sharding while setting up
+            // a sharded cluster, so we do not expect to see data in the collection.
+            // Therefore, it is ok to log this index build.
+            LOGV2(5173300,
+                  "Creating index on sharding collection with existing data",
+                  "ns"_attr = ns,
+                  "uuid"_attr = collection->uuid(),
+                  "index"_attr = indexSpecs[0]);
+            auto indexConstraints = IndexBuildsManager::IndexConstraints::kEnforce;
+            IndexBuildsCoordinator::get(opCtx)->createIndexes(
+                opCtx, collection->uuid(), indexSpecs, indexConstraints, fromMigrate);
+        } else {
+            writeConflictRetry(opCtx, "ShardLocal::createIndexOnConfig", ns.ns(), [&] {
+                WriteUnitOfWork wunit(opCtx);
+                IndexBuildsCoordinator::get(opCtx)->createIndexesOnEmptyCollection(
+                    opCtx, collection->uuid(), indexSpecs, fromMigrate);
+                wunit.commit();
+            });
+        }
     } catch (const DBException& e) {
         return e.toStatus();
     }
